fix benchmark again